--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -556,6 +556,7 @@
                                                     </cells>
                                                 </collectionView>
                                             </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="voV-eu-CFo" firstAttribute="top" secondItem="VTC-qe-v1V" secondAttribute="bottom" constant="8" id="7pv-Lt-R4L"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="voV-eu-CFo" secondAttribute="trailing" constant="8" id="DAk-vQ-ATy"/>
