--- a/SadAgregator/View/cells/PostCell/CollectionViewCells/OptionCell/OptionCollectionViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/CollectionViewCells/OptionCell/OptionCollectionViewCell.xib
@@ -10,17 +10,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="OptionCollectionViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="110" height="23"/>
+            <rect key="frame" x="0.0" y="0.0" width="124" height="34"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="110" height="23"/>
+                <rect key="frame" x="0.0" y="0.0" width="124" height="34"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LqG-aZ-LRz" userLabel="BgView">
-                        <rect key="frame" x="0.0" y="0.0" width="110" height="23"/>
+                        <rect key="frame" x="0.0" y="0.0" width="124" height="34"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTF-Rq-vFO">
-                                <rect key="frame" x="0.0" y="0.0" width="110" height="23"/>
+                                <rect key="frame" x="2" y="2" width="120" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -28,10 +28,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.89626395700000006" green="0.90821486709999999" blue="0.90771836039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="BTF-Rq-vFO" firstAttribute="leading" secondItem="LqG-aZ-LRz" secondAttribute="leading" id="2px-8m-eiQ"/>
-                            <constraint firstItem="BTF-Rq-vFO" firstAttribute="top" secondItem="LqG-aZ-LRz" secondAttribute="top" id="OBn-CV-KEu"/>
-                            <constraint firstAttribute="trailing" secondItem="BTF-Rq-vFO" secondAttribute="trailing" id="Qj4-Ou-09u"/>
-                            <constraint firstAttribute="bottom" secondItem="BTF-Rq-vFO" secondAttribute="bottom" id="vUl-OJ-mR5"/>
+                            <constraint firstItem="BTF-Rq-vFO" firstAttribute="leading" secondItem="LqG-aZ-LRz" secondAttribute="leading" constant="2" id="2px-8m-eiQ"/>
+                            <constraint firstItem="BTF-Rq-vFO" firstAttribute="top" secondItem="LqG-aZ-LRz" secondAttribute="top" constant="2" id="OBn-CV-KEu"/>
+                            <constraint firstAttribute="trailing" secondItem="BTF-Rq-vFO" secondAttribute="trailing" constant="2" id="Qj4-Ou-09u"/>
+                            <constraint firstAttribute="bottom" secondItem="BTF-Rq-vFO" secondAttribute="bottom" constant="2" id="vUl-OJ-mR5"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -43,12 +43,12 @@
                 <constraint firstItem="LqG-aZ-LRz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9sk-Q6-2HT"/>
                 <constraint firstAttribute="trailing" secondItem="LqG-aZ-LRz" secondAttribute="trailing" id="Pfw-YF-xBQ"/>
             </constraints>
-            <size key="customSize" width="163" height="50"/>
+            <size key="customSize" width="177" height="61"/>
             <connections>
                 <outlet property="label" destination="BTF-Rq-vFO" id="e2D-Id-rtE"/>
                 <outlet property="view" destination="LqG-aZ-LRz" id="upY-6a-sqF"/>
             </connections>
-            <point key="canvasLocation" x="-12.318840579710146" y="133.92857142857142"/>
+            <point key="canvasLocation" x="-2.8985507246376816" y="137.27678571428569"/>
         </collectionViewCell>
     </objects>
 </document>
