--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -55,44 +56,10 @@
                             <constraint firstItem="2D9-dG-k9E" firstAttribute="leading" secondItem="F9Q-xC-IMV" secondAttribute="trailing" constant="8" id="zim-VP-mEa"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uvk-mB-cCj" userLabel="SizesView">
-                        <rect key="frame" x="8" y="36" width="347" height="30"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Размеры:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqp-Hf-9dM">
-                                <rect key="frame" x="0.0" y="4.5" width="77" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="VRL-Vw-1Yg">
-                                <rect key="frame" x="85" y="5" width="254" height="20"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ncQ-rG-xd6">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                            </collectionView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="VRL-Vw-1Yg" firstAttribute="centerY" secondItem="uvk-mB-cCj" secondAttribute="centerY" id="4Ux-t7-TLH"/>
-                            <constraint firstItem="Zqp-Hf-9dM" firstAttribute="centerY" secondItem="uvk-mB-cCj" secondAttribute="centerY" id="4hG-ZL-KCq"/>
-                            <constraint firstAttribute="height" constant="30" id="MOA-dt-rCj"/>
-                            <constraint firstItem="VRL-Vw-1Yg" firstAttribute="leading" secondItem="Zqp-Hf-9dM" secondAttribute="trailing" constant="8" id="Y8p-d0-8Lu"/>
-                            <constraint firstAttribute="bottom" secondItem="VRL-Vw-1Yg" secondAttribute="bottom" constant="5" id="gKc-aa-Qzo"/>
-                            <constraint firstAttribute="trailing" secondItem="VRL-Vw-1Yg" secondAttribute="trailing" constant="8" id="jLC-sT-ahc"/>
-                            <constraint firstItem="VRL-Vw-1Yg" firstAttribute="top" secondItem="uvk-mB-cCj" secondAttribute="top" constant="5" id="qrT-cs-EMj"/>
-                            <constraint firstItem="Zqp-Hf-9dM" firstAttribute="leading" secondItem="uvk-mB-cCj" secondAttribute="leading" id="xWh-3z-mXt"/>
-                        </constraints>
-                    </view>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="lkP-dZ-roe">
-                        <rect key="frame" x="8" y="74" width="347" height="35"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="35" id="NcE-WF-cK6"/>
-                        </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OHH-BN-LSR">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="IO7-nw-6KB">
+                        <rect key="frame" x="8" y="36" width="347" height="393"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="15v-TS-fz7">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -104,27 +71,27 @@
                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="p91-BU-613" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="1vk-CR-bbi"/>
-                    <constraint firstAttribute="trailing" secondItem="lkP-dZ-roe" secondAttribute="trailing" constant="8" id="9Le-43-wH5"/>
+                    <constraint firstAttribute="bottom" secondItem="IO7-nw-6KB" secondAttribute="bottom" constant="8" id="3e3-N9-qji"/>
                     <constraint firstAttribute="trailing" secondItem="p91-BU-613" secondAttribute="trailing" constant="8" id="DtU-Aa-3dK"/>
-                    <constraint firstItem="uvk-mB-cCj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="MmJ-db-Rzn"/>
-                    <constraint firstItem="lkP-dZ-roe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="PQI-0d-47f"/>
-                    <constraint firstAttribute="trailing" secondItem="uvk-mB-cCj" secondAttribute="trailing" constant="8" id="Tg6-Xx-mpl"/>
-                    <constraint firstItem="uvk-mB-cCj" firstAttribute="top" secondItem="p91-BU-613" secondAttribute="bottom" constant="8" id="aNi-At-ODS"/>
+                    <constraint firstItem="IO7-nw-6KB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="G01-5O-72a"/>
+                    <constraint firstItem="IO7-nw-6KB" firstAttribute="top" secondItem="p91-BU-613" secondAttribute="bottom" constant="8" id="dW6-W4-rCQ"/>
                     <constraint firstItem="p91-BU-613" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="knb-LC-dRm"/>
-                    <constraint firstItem="lkP-dZ-roe" firstAttribute="top" secondItem="uvk-mB-cCj" secondAttribute="bottom" constant="8" id="lCt-Ey-hvx"/>
+                    <constraint firstAttribute="trailing" secondItem="IO7-nw-6KB" secondAttribute="trailing" constant="8" id="lHg-a3-ZaH"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="byLabel" destination="F9Q-xC-IMV" id="4jX-AI-Eh1"/>
-                <outlet property="optionCollectionView" destination="lkP-dZ-roe" id="esQ-RV-K0m"/>
+                <outlet property="collectionView" destination="IO7-nw-6KB" id="jh9-Va-oSn"/>
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
-                <outlet property="ramzmeriLabel" destination="Zqp-Hf-9dM" id="0zY-Wv-tQK"/>
-                <outlet property="sizeCollectionView" destination="VRL-Vw-1Yg" id="Uuv-8e-jfv"/>
-                <outlet property="sizesViewHeight" destination="MOA-dt-rCj" id="hV3-PG-r4H"/>
                 <outlet property="vendorLabel" destination="SSR-4S-9BF" id="PqE-PW-DhV"/>
             </connections>
-            <point key="canvasLocation" x="168.84057971014494" y="270.20089285714283"/>
+            <point key="canvasLocation" x="54" y="270"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
