--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -94,13 +94,20 @@
                                         <color key="textColor" systemColor="systemGray2Color"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMJ-7j-aH6">
+                                        <rect key="frame" x="0.0" y="0.0" width="108" height="25"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="SgS-Tb-JH2" secondAttribute="bottom" id="0vc-nJ-Peh"/>
                                     <constraint firstItem="SgS-Tb-JH2" firstAttribute="top" secondItem="zhE-qm-INE" secondAttribute="top" id="2k5-LH-fte"/>
+                                    <constraint firstItem="vMJ-7j-aH6" firstAttribute="leading" secondItem="zhE-qm-INE" secondAttribute="leading" id="3VD-Hs-H0j"/>
                                     <constraint firstItem="SzE-iO-8hf" firstAttribute="leading" secondItem="SgS-Tb-JH2" secondAttribute="trailing" id="945-pj-dYL"/>
+                                    <constraint firstAttribute="trailing" secondItem="vMJ-7j-aH6" secondAttribute="trailing" id="9ie-nx-0n4"/>
+                                    <constraint firstAttribute="bottom" secondItem="vMJ-7j-aH6" secondAttribute="bottom" id="IKS-NZ-DzU"/>
                                     <constraint firstItem="SgS-Tb-JH2" firstAttribute="leading" secondItem="zhE-qm-INE" secondAttribute="leading" id="Lqg-yM-Amj"/>
+                                    <constraint firstItem="vMJ-7j-aH6" firstAttribute="top" secondItem="zhE-qm-INE" secondAttribute="top" id="dzj-h0-GSU"/>
                                     <constraint firstItem="SzE-iO-8hf" firstAttribute="centerY" secondItem="zhE-qm-INE" secondAttribute="centerY" id="jrL-Dx-Un9"/>
                                     <constraint firstAttribute="trailing" secondItem="SzE-iO-8hf" secondAttribute="trailing" id="pqh-MM-fsH"/>
                                 </constraints>
